--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -34,7 +34,7 @@
     <%# /支払額の表示 %>
 
     <%= form_with model: [@item, @purchase_address], url: item_purchases_path(@item), data: {turbo_method: :post, local: true}, id: 'charge-form', class: 'transaction-form-wrap' do |f| %>
-    <%= render 'error_messages', model: f.object %>
+    <%= render 'shared/error_messages', model: f.object %>
     <%# カード情報の入力 %>
     <div class='credit-card-form'>
       <h1 class='info-input-haedline'>
